# PipelinePrototype

./: .dockerignore  .gitignore  .kedro.yml  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  setup.py
conf/base/: catalog.yml  parameters.yml
data/01_raw/: raw_data_path.txt
data/02_intermediate/: preprocessed_data.parquet
data/03_primary/: X_test.parquet  X_train.parquet  y_test.parquet  y_train.parquet
data/04_model/best_hyperparameters.pkl/2025-03-31T21.55.10.493Z/: best_hyperparameters.pkl
data/04_model/trained_model.pkl/2025-03-31T21.55.10.493Z/: trained_model.pkl
data/06_reporting/: model_metrics.json
notebooks/: modeling_starter.ipynb
src/insurance_prediction/: __init__.py  __main__.py  pipeline.py  pipeline_registry.py  settings.py
src/insurance_prediction/pipelines/: __init__.py
src/insurance_prediction/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
src/insurance_prediction/pipelines/model_evaluation/: __init__.py  nodes.py  pipeline.py
src/insurance_prediction/pipelines/model_training/: __init__.py  nodes.py  pipeline.py
src/tests/: __init__.py
src/tests/integration/: __init__.py  test_pipeline.py
src/tests/unit/: __init__.py  test_data_processing.py  test_model_evaluation.py  test_model_training.py
